ESM-743: show the email template name in the Type Column for Invitations and Updates, so we can tell what template it is based on.

--- a/modules/communications/client/views/communication-list.html
+++ b/modules/communications/client/views/communication-list.html
@@ -22,8 +22,8 @@
                 </td>
                 <td class="artifacts-col" header-class="'artifacts-col'"
                     data-title="'Type'"
-                    filter="{'type':'text'}"
-                    sortable="'type'">{{o.type}}</td>
+                    filter="{'emailTemplate.name':'text'}"
+                    sortable="'emailTemplate.name'">{{o.emailTemplate.name}}</td>
                  <td class="recipients-col" header-class="'recipients-col'"
                     data-title="'Recipients'"
                     sortable="'recipients'">{{o.recipients ? o.recipients.length : 0}}</td>
