--- a/modules/email-templates/client/views/email-template-list.html
+++ b/modules/email-templates/client/views/email-template-list.html
@@ -25,7 +25,7 @@
 					</a>
 					<button class="btn btn-default btn-sm"
 						ng-if="application.userCan.createEmailTemplate"
-						title="Delete Comment Period"
+						title="Delete Email Template"
 						ng-click="$event.stopPropagation();"
 						x-confirm-dialog
 						x-title-text="'Delete Email Template'"
