--- a/modules/users/client/views/admin/user-list.html
+++ b/modules/users/client/views/admin/user-list.html
@@ -21,10 +21,14 @@
 							filter="{'username':'text'}"
 							filter-data="ptypes"
 							sortable="'username'">{{o.username}}</td>
-						<td data-title="'Full Name'"
-							filter="{'displayName':'text'}"
+						<td data-title="'Last Name'"
+							filter="{'lastName':'text'}"
 							filter-data="ptypes"
-							sortable="'displayName'">{{o.displayName}}</td>
+							sortable="'lastName'">{{o.lastName}}</td>
+						<td data-title="'First Name'"
+							filter="{'firstName':'text'}"
+							filter-data="ptypes"
+							sortable="'firstName'">{{o.firstName}}</td>
 						<td data-title="'Organization'"
 							filter="{'orgName':'text'}"
 							sortable="'orgName'">{{o.org.name}}</td>
