--- a/modules/users/client/views/admin/user-list.html
+++ b/modules/users/client/views/admin/user-list.html
@@ -17,14 +17,18 @@
 			<section class="panel panel-default">
 				<table ng-table="tableParams" x-show-filter="toggleFilter" class="table table-striped table-hover">
 					<tr ng-repeat="o in $data" ui-sref="admin.user.detail({userId:o._id})" class="clickable">
-						<td data-title="'Username'"
-							filter="{'username':'text'}"
-							filter-data="ptypes"
-							sortable="'username'">{{o.username}}</td>
-						<td data-title="'Full Name'"
-							filter="{'displayName':'text'}"
-							filter-data="ptypes"
-							sortable="'displayName'">{{o.displayName}}</td>
+						<td class="name-col"
+							header-class="'name-col'"
+							data-title="'Last Name'"
+							filter="{'lastName':'text'}"
+							sortable="'lastName'">{{o.lastName}}</a>
+						</td>
+						<td class="name-col"
+							header-class="'name-col'"
+							data-title="'First Name'"
+							filter="{'firstName':'text'}"
+							sortable="'firstName'">{{o.firstName}}</a>
+						</td>
 						<td data-title="'Organization'"
 							filter="{'orgName':'text'}"
 							sortable="'orgName'">{{o.org.name}}</td>
