ESM-855: add projects tab to organizations, with click back to project.  Revamped the View/Edit screens to use one html file, and one directive - customizable for add, edit, view modes.

--- a/modules/organizations/client/views/org-search-chooser.html
+++ b/modules/organizations/client/views/org-search-chooser.html
@@ -17,13 +17,13 @@
 					<input class="hidden" ng-click="toggleItem(o)" type="radio" ng-checked="isChecked(o)"/>{{o.name}}
 				</td>
 				<td class="name-col" 
-					header-class="'nacompanyLegalme-col'" 
+					header-class="'name-col'"
 					data-title="'Legal Name'" 
 					filter="{'companyLegal':'text'}" 
 					sortable="'companyLegal'">{{o.companyLegal}}</a>
 				</td>
 				<td class="name-col" 
-					header-class="'nacompanyLegalme-col'" 
+					header-class="'name-col'"
 					data-title="'DBA'" 
 					filter="{'company':'text'}" 
 					sortable="'company'">{{o.company}}</a>
