--- a/modules/users/client/views/user-edit.html
+++ b/modules/users/client/views/user-edit.html
@@ -4,9 +4,9 @@
 		<h1>{{userEditControl.title}}<span ng-show="user.username"> &nbsp;&rsaquo;&nbsp; {{user.username}}</span></h1>
 		<div class="actions">
 			<button class="btn btn-default btn-sm" ng-click="userEditControl.cancel()" type="button">Cancel</button>
-			<button class="btn btn-danger btn-sm" ng-click="userEditControl.edit()" type="button" ng-show="enableEdit"><span class="glyphicon glyphicon-pencil"></span><span>Edit</span></a>
-				<button class="btn btn-danger btn-sm" ng-click="userEntryControl.deleteUser()" type="button" ng-show="enableDelete"><span class="glyphicon glyphicon-remove"></span><span>Delete</span></button>
-				<button class="btn btn-primary btn-sm" ng-click="userEntryControl.saveUser(userForm.$valid)" type="button" ng-show="enableSave">Save</button>
+			<button class="btn btn-danger btn-sm" ng-click="userEditControl.edit()" type="button" ng-show="enableEdit"><span class="glyphicon glyphicon-pencil"></span><span>Edit</span></button>
+			<button class="btn btn-danger btn-sm" ng-click="userEntryControl.deleteUser()" type="button" ng-show="enableDelete"><span class="glyphicon glyphicon-remove"></span><span>Delete</span></button>
+			<button class="btn btn-primary btn-sm" ng-click="userEntryControl.saveUser(userForm.$valid)" type="button" ng-show="enableSave">Save</button>
 		</div>
 	</div>
 
