--- a/modules/projects/client/views/mine.html
+++ b/modules/projects/client/views/mine.html
@@ -62,7 +62,7 @@
                             <p class="tab-intro"
                                ng-bind-html="content(project, 'INTRO_TEXT', 'COMPLIANCE')"></p>
                             -->
-                            <p class="tab-intro">Compliance and enforcement (C&E) activities begin after a claim is staked and continue through exploration and the life of a mine. The Ministry of Energy and Mines (MEM), Ministry of Environment (MOE) and Environmental Assessment Office (EAO) work together to provide integrated oversight of British Columbia’s mining sector. Records of inspections conducted during the 2016 calendar year can be found below. To learn more about compliance oversight of major mines in general, <a ui-sref="compliance-oversight">click here</a>.</span></p>
+                            <p class="tab-intro">Compliance and enforcement (C&E) activities begin after a claim is staked and continue through exploration and the life of a mine. The Ministry of Energy and Mines (MEM), Ministry of Environment (ENV) and Environmental Assessment Office (EAO) work together to provide integrated oversight of British Columbia’s mining sector. Records of inspections conducted during the 2016 calendar year can be found below. To learn more about compliance oversight of major mines in general, <a ui-sref="compliance-oversight">click here</a>.</span></p>
                             <tmpl-project-compliance project="project"></tmpl-project-compliance>
                         </div>
 
