--- a/modules/project-comments/client/views/period-edit.html
+++ b/modules/project-comments/client/views/period-edit.html
@@ -65,7 +65,7 @@
 				</div>
 				<div class="col-md-3">
 					<label class="control-label">Start Date</label>
-					<div class="form-control date-picker"
+					<div class="form-control pcp-date date-picker"
 						ng-disabled="!startPickerEnabled"
 						x-modal-date-picker x-selected-date="period.dateStarted" x-picker-enabled="startPickerEnabled"
 					 	title="{{ period.dateStarted | amDateFormat:'HH:mm:ss' }}">
@@ -76,7 +76,7 @@
 				</div>
 				<div class="col-md-3">
 					<label class="control-label">End Date</label>
-					<div class="form-control date-picker"
+					<div class="form-control pcp-date date-picker"
 						ng-disabled="!endPickerEnabled"
 						x-modal-date-picker x-selected-date="period.dateCompleted" x-picker-enabled="endPickerEnabled"
 					 	title="{{ period.dateCompleted | amDateFormat:'HH:mm:ss' }}">
