--- a/modules/home/client/scss/home.scss
+++ b/modules/home/client/scss/home.scss
@@ -1,6 +1,4 @@
 
-// Home Page
-
 // Banner Images
 .hero-banner {
     background-image: url("/modules/core/client/images/sample-bg-img-duotone-2.jpg");
@@ -18,5 +16,59 @@
         .fast-facts {
             margin-top: 0;
         }
+    }
+}
+
+// Welcome Alert
+$notify-dialog-width-lg: 40rem;
+$notify-dialog-padding: 2rem;
+
+.welcome-alert-container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1000;
+
+    .notify-dialog {
+        position: fixed;
+        top: 2rem;
+        left: 50%;
+        z-index: 1001;
+        margin-left: calc(#{$notify-dialog-width-lg} / -2);
+        width: $notify-dialog-width-lg;
+        border-radius: 0.25rem;
+        background: $modal-bg;
+    }
+
+    .notify-header {
+        padding-top: $notify-dialog-padding;
+        padding-right: $notify-dialog-padding;
+        padding-left: $notify-dialog-padding;
+
+        h2 {
+            margin: 0;
+        }
+    }
+
+    .notify-body {
+        padding: $notify-dialog-padding;
+        padding-top: calc(#{$notify-dialog-padding} - 0.5rem)
+    }
+
+    .notify-footer {
+        padding-right: $notify-dialog-padding;
+        padding-bottom: $notify-dialog-padding;
+        padding-left: $notify-dialog-padding;
+    }
+
+    .backdrop {
+        position: absolute;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        background-color: rgba(#000, 0.5);
     }
 }
