MEM-298 - Small styling change to the intro text on the mines.list.html
- Added styling for hb-txt > strong elements.

--- a/modules/projects/client/views/mines.list.html
+++ b/modules/projects/client/views/mines.list.html
@@ -6,7 +6,7 @@
             <div class="container-inner">
                 <div class="hb-txt">
                     <h1>Find Mines in British Columbia</h1>
-                    <p class="mb-2">The BC Mine Information website currently profiles 15 major mines located across the province. More mines will be added to this site in the coming months.</p>
+                    <p class="mb-2">The BC Mine Information website currently profiles 15 major mines located across the province. <strong>More mines will be added to this site in the coming months.</strong></p>
                 </div>
             </div>
         </div>
