--- a/modules/core/client/scss/components/hero-banner.scss
+++ b/modules/core/client/scss/components/hero-banner.scss
@@ -90,6 +90,11 @@
         line-height: 1.5rem;
     }
 
+    strong {
+        color: $gold;
+        font-weight: 700;
+    }
+
     .badge {
         position: relative;
         top: 0.4rem;
