--- a/modules/home/client/views/home.html
+++ b/modules/home/client/views/home.html
@@ -24,7 +24,7 @@
 						<h2>About BC Mine Information</h2>
 						<p>The Ministry of Energy and Mines (MEM), the Ministry of Environment (ENV) and the Environmental Assessment Office (EAO) have collaborated to make information on the Province’s oversight of major mines in British Columbia more accessible than ever before.</p>
 						<p>This is the first time mine-related information from all three agencies has been made available online in one place, and more information will be added on an ongoing basis.</p>
-						<p>This site currently profiles 15 major mines across the province (7 operating metal mines, 6 operating coal mines, and 2 under construction metal mines). Other permitted major mines in BC will be added in the coming months.</p>
+						<p>This site currently profiles 15 major mines across the province (7 operating metal mines, 6 operating coal mines, and 2 under construction metal mines). Information on these mines will be continually added to the website, and other permitted major mines in BC will be added in the coming months.</p>
 						<p class="mb-0">If you want to learn more about a major mine not yet included on this website, please visit <a href="https://mines.empr.gov.bc.ca" target="_blank">mines.empr.gov.bc.ca</a>.</p>
 					</section>
 				</div>
