ESM-856: api to get a user's associated projects  - either through roles or project groups.  add tab to view/edit/profile for a selected user and list the projects/roles/groups.  More UI styling to come.

--- a/modules/users/client/views/user-edit.html
+++ b/modules/users/client/views/user-edit.html
@@ -14,6 +14,7 @@
 		<x-user-entry
 			x-readonly="readonly"
 			x-user="user"
+			x-groups-and-roles="groupsAndRoles"
 			x-org="org"
 			x-mode="mode"
 			x-enable-signature="enableSignature"
