--- a/modules/home/client/scss/home.scss
+++ b/modules/home/client/scss/home.scss
@@ -30,45 +30,91 @@ $notify-dialog-padding: 2rem;
     width: 100%;
     height: 100%;
     z-index: 1000;
+    padding: 1rem;
+    overflow-y: auto;
 
     .notify-dialog {
-        position: fixed;
-        top: 2rem;
-        left: 50%;
+        position: relative;
         z-index: 1001;
-        margin-left: calc(#{$notify-dialog-width-lg} / -2);
-        width: $notify-dialog-width-lg;
         border-radius: 0.25rem;
         background: $modal-bg;
     }
 
     .notify-header {
-        padding-top: $notify-dialog-padding;
-        padding-right: $notify-dialog-padding;
-        padding-left: $notify-dialog-padding;
+        padding-top: 1.5rem;
+        padding-right: 1.5rem;
+        padding-left: 1.5rem;
 
         h2 {
-            margin: 0;
+            margin-top: 0;
+            margin-bottom: 1.5rem;
+            font-size: 1.25rem;
+            font-weight: 600;
         }
     }
 
     .notify-body {
-        padding: $notify-dialog-padding;
-        padding-top: calc(#{$notify-dialog-padding} - 0.5rem)
+        padding: 1.5rem;
+        padding-top: 0;
+
+        p {
+            margin-bottom: 1.5rem;
+            font-size: 0.875rem;
+            line-height: 1.2rem;
+        }
     }
 
     .notify-footer {
-        padding-right: $notify-dialog-padding;
-        padding-bottom: $notify-dialog-padding;
-        padding-left: $notify-dialog-padding;
+        padding-right: 1.5rem;
+        padding-bottom: 1.5rem;
+        padding-left: 1.5rem;
     }
 
     .backdrop {
-        position: absolute;
+        position: fixed;
         top: 0;
         right: 0;
         bottom: 0;
         left: 0;
         background-color: rgba(#000, 0.5);
+    }
+}
+
+@media (min-width: 760px) {
+    .welcome-alert-container {
+        .notify-dialog {
+            position: fixed;
+            top: 2rem;
+            left: 50%;
+            z-index: 1001;
+            margin-left: calc(#{$notify-dialog-width-lg} / -2);
+            width: $notify-dialog-width-lg;
+        }
+
+        .notify-header {
+            font-size: 2rem;
+            padding: 2rem;
+            padding-bottom: 0;
+
+            h2 {
+                font-size: 2rem;
+                font-weight: 600;
+            }
+        }
+
+        .notify-body {
+            padding: 2rem;
+            padding-top: 0;
+
+            p {
+                font-size: 1rem;
+                line-height: 1.5rem; 
+            }
+        }
+
+        .notify-footer {
+            padding: 2rem;
+            padding-top: 0;
+        }
     }
 }
