MEM-298 - Ad hoc Edits
- Adding links back to older mines website

--- a/modules/core/client/scss/components/fast-facts.scss
+++ b/modules/core/client/scss/components/fast-facts.scss
@@ -93,7 +93,8 @@ $ff-metric-bg: #002663;
     height: 4.5rem;
     background: $ff-metric-bg;
     color: #FFF;
-    font-size: 1.1rem;
+    font-family: "Arial Black", "Arial Bold", Gadget, sans-serif;
+    font-size: 1rem;
     font-weight: 600;
     text-align: center;
 
