--- a/modules/inspections/client/views/project-inspections.html
+++ b/modules/inspections/client/views/project-inspections.html
@@ -1,5 +1,5 @@
 
-<section>
+<section class="ce-section">
     <h3>Inspections <span>January 1 - December 31, 2016</span></h3>
     <!--
     <div class="ce-list-header">Viewing {{complianceList.data.length}} Records</div>
