--- a/modules/core/client/scss/components/tab-nav.scss
+++ b/modules/core/client/scss/components/tab-nav.scss
@@ -28,15 +28,16 @@
 
 @media (min-width: 760px) {
     .nav-pills {
+        margin: 0;
+        margin-top: -0.5rem;
         margin-bottom: 2.5rem;
         background-color: transparent;
         border-bottom: 3px solid #f1f1f1;
         border-radius: 0;
 
         .nav-item {
-            float: none;
             display: inline-block;
-            margin-bottom: -3px;
+            margin-bottom: -4px;
             width: auto;
         }
 
@@ -44,11 +45,12 @@
             position: relative;
             margin: 0;
             padding: 0.5rem 1rem;
-            border-bottom: 3px solid #f1f1f1;
+            border-bottom: 4px solid #f1f1f1;
             background-color: transparent;
+            color: #CCC;
             text-transform: uppercase;
-            font-size: 0.875rem;
-            font-weight: 400;
+            font-size: 0.85rem;
+            font-weight: 700;
 
             &.active {
                 border-color: #38598a;
