--- a/modules/projects/client/views/mine.html
+++ b/modules/projects/client/views/mine.html
@@ -14,7 +14,7 @@
     <div class="container">
         <div class="row">
             <main class="col-lg-8">
-                <section>
+                <section class="mb-0">
                     <h2 ng-bind-html="content(project, 'SUBTITLE', 'DETAILS')"></h2>
                     <ul class="nav nav-pills" role="tablist">
                         <li class="nav-item">
@@ -42,16 +42,17 @@
                         
                         <!-- Authorizations -->
                         <div class="authorizations tab-pane" id="authorizations" role="tabpanel">    
-                            <!-- Putting generic content back in until we have content. -->
-                            <!--
-                            <p class="tab-intro"
-                               ng-bind-html="content(project, 'INTRO_TEXT', 'AUTHORIZATION')"></p>
-                            -->
                             <p class="tab-intro">Environmental assessment certificates and permits issued under the Mines Act and the Environmental Management Act (EMA) are the primary provincial authorizations for major mine projects in British Columbia. Below you will find a list of authorizations associated with each of these three acts. <span>Learn more about Authorizations <a ui-sref="authorizations">here</a>.</span></p>
 
                             <tmpl-project-authorizations project="project" agency="EAO"></tmpl-project-authorizations>
                             <tmpl-project-authorizations project="project" agency="ENV"></tmpl-project-authorizations>
                             <tmpl-project-authorizations project="project" agency="MEM"></tmpl-project-authorizations>
+
+                            <div class="main-footer">
+                                <h3>Can't find what you are looking for?</h3>
+                                <p>Mines Act permits issued for {{project.name}} prior to 2013 can be accessed at <a href="mines.empr.gov.bc.ca" target="_blank">mines.empr.gov.bc.ca</a>. These records will be moved to the new BC Mine Information website in the coming months.</p>
+                                <button class="btn inverted slide-r-btn"><span>Visit mines.empr.gov.bc.ca</span><i class="material-icons">open_in_new</i></button>
+                            </div>
                             
                         </div><!-- / Authorizations -->
 
@@ -63,7 +64,14 @@
                                ng-bind-html="content(project, 'INTRO_TEXT', 'COMPLIANCE')"></p>
                             -->
                             <p class="tab-intro">Compliance and enforcement (C&E) activities begin after a claim is staked and continue through exploration and the life of a mine. The Ministry of Energy and Mines (MEM), Ministry of Environment (ENV) and Environmental Assessment Office (EAO) work together to provide integrated oversight of British Columbia’s mining sector. Records of inspections conducted during the 2016 calendar year can be found below. To learn more about compliance oversight of major mines in general, <a ui-sref="compliance-oversight">click here</a>.</span></p>
+                            
                             <tmpl-project-compliance project="project"></tmpl-project-compliance>
+
+                            <div class="main-footer">
+                                <h3>Can't find what you are looking for?</h3>
+                                <p>Ministry of Energy and Mines inspection reports for {{project.name}} from 2013 through to 2015 can be accessed at <a href="mines.empr.gov.bc.ca" target="_blank">mines.empr.gov.bc.ca</a>. These records will be moved to the new BC Mine Information website in the coming months.</p>
+                                <button class="btn inverted slide-r-btn"><span>Visit mines.empr.gov.bc.ca</span><i class="material-icons">open_in_new</i></button>
+                            </div>
                         </div>
 
                         <!-- Other Documents -->
@@ -77,6 +85,7 @@
             </main>
             <aside class="col-lg-4">
                 <section>
+                    <h4>Project Details</h4>
                     <div class="map-section"><div class="map-thumb"><a href ui-sref="maps({project: project})"><img src="{{project.staticMap}}"/></div></a></div>
                     <ul class="mmti-side-list mine-details-list">
                         <li>
