--- a/modules/communications/client/views/communication-edit.html
+++ b/modules/communications/client/views/communication-edit.html
@@ -4,6 +4,11 @@
 		<h1>Add/Edit Updates &nbsp;&rsaquo;&nbsp; {{s.communication.name}} <span class="placeholder-value" ng-if="!s.communication.name">Untitled</span>
 		</h1>
 		<div class="actions">
+			<button ng-show="hasMailRecipients()"
+					ng-if="authentication.user"
+					class="btn btn-default btn-sm"
+					ng-click="s.downloadAddressList()">
+				<span class="glyphicon glyphicon-download-alt"></span><span>Download CSV</span></button>
 			<button type="button" class="btn btn-default btn-sm" ng-click="cancel()">Cancel</button>
 			<button class="btn btn-danger btn-sm" ng-if="canDelete" ng-click="delete(s.communication)"><span class="glyphicon glyphicon-trash"></span><span>Delete</span>
       </button>
@@ -77,50 +82,25 @@
 		</div><!--/tab-pane-->
 
 		<div class="tab-pane" ng-show="form.curTab === 'recipients'" ng-form="recipientsForm">
-			<div class='button-bar'>
-				<button type="button"
-					x-add-new-recipient x-project="project"
-					x-current="adhocRecipient" class="btn btn-default btn-sm">
-					<span class="glyphicon glyphicon-plus"></span><span>Add New</span></button>
-				<button type="button"
-					x-user-search-chooser
-          x-title="'Add Existing'"
+			<x-recipients-mgr
 					x-project="project"
-					x-destination="existingRecipients" class="btn btn-default btn-sm">
-					<span class="glyphicon glyphicon-plus"></span><span>Add Existing</span></button>
-				<button class="btn btn-default btn-sm"
-					ng-if="authentication.user"
-					ng-click="s.downloadAddressList()">
-					<span class="glyphicon glyphicon-download-alt"></span><span>Download CSV</span></button>
-			</div>
-			<div class="panel panel-default">
-				<table ng-table="tableParams" show-filter="true" class="communications-table table table-hover vc-table">
-					<tr ng-repeat="o in $data">
-						<td class="name-col" header-class="'name-col'" data-title="'Name'" filter="{'displayName':'text'}" sortable="'displayName'">{{o.displayName}}
-						</td>
-						<td class="email-col" header-class="'email-col'" data-title="'Email'" filter="{'email':'text'}" sortable="'email'">{{o.email}}
-						</td>
-						<td class="org-col" header-class="'org-col'" data-title="'Organization'" filter="{'org':'text'}" sortable="'org'">{{o.org}}
-						</td>
-						<td class="actions-col action-x1" header-class="'actions-col action-x1'" data-title="''">
-							<button type="button" class="btn btn-default btn-sm" ng-click="removeRecipient(o.email)">
-                <span class="glyphicon glyphicon-remove"></span>
-              </button>
-						</td>
-					</tr>
-
-					<tr class="no-records hidden" ng-if="!$data || $data.length === 0">
-						<td colspan="2">
-							No records found.
-						</td>
-					</tr>
-
-				</table>
-			</div>
+					x-recipients="recipients"
+					x-mode="'edit'"
+					x-enable-add-new="true"
+					x-enable-add-existing="true"
+					x-enable-cc="true"
+					x-enable-bcc="true"
+					x-show-mail="true"
+					x-show-type-col="true">
 		</div>
 
 		<div class="form-footer">
 			<div class="pull-right">
+				<button ng-show="hasMailRecipients()"
+						ng-if="authentication.user"
+						class="btn btn-default btn-sm"
+						ng-click="s.downloadAddressList()">
+					<span class="glyphicon glyphicon-download-alt"></span><span>Download CSV</span></button>
 				<button type="button" class="btn btn-default btn-sm" ng-click="cancel()">Cancel</button>
 				<button class="btn btn-danger btn-sm" ng-if="canDelete" ng-click="delete(s.communication)">
 					<span class="glyphicon glyphicon-trash"></span><span>Delete</span></button>
