--- a/modules/invitations/client/views/invitation-view.html
+++ b/modules/invitations/client/views/invitation-view.html
@@ -44,25 +44,16 @@
 	</div>
 
 	<div class="tab-pane" ng-show="form.curTab === 'recipients'" ng-form="recipientsForm">
-		<div class="panel panel-default">
-			<table ng-table="tableParams" show-filter="true" class="communications-table table table-hover vc-table">
-				<tr ng-repeat="o in $data">
-					<td class="name-col" header-class="'name-col'" data-title="'Name'" filter="{'displayName':'text'}" sortable="'displayName'">{{o.displayName}}
-					</td>
-					<td class="email-col" header-class="'email-col'" data-title="'Email'" filter="{'email':'text'}" sortable="'email'">{{o.email}}
-					</td>
-					<td class="org-col" header-class="'org-col'" data-title="'Organization'" filter="{'org':'text'}" sortable="'org'">{{o.org}}
-					</td>
-				</tr>
-
-				<tr class="no-records hidden" ng-if="!$data || $data.length === 0">
-					<td colspan="2">
-						No records found.
-					</td>
-				</tr>
-
-			</table>
-		</div>
+		<x-recipients-mgr
+				x-project="project"
+				x-recipients="recipients"
+				x-mode="'view'"
+				x-enable-add-new="false"
+				x-enable-add-existing="false"
+				x-show-cc="false"
+				x-show-bcc="false"
+		        x-show-mail="false"
+				x-show-type-col="false">
 	</div>
 
 </div>
