--- a/modules/projects/client/views/mine.html
+++ b/modules/projects/client/views/mine.html
@@ -50,8 +50,8 @@
 
                             <div class="main-footer">
                                 <h3>Can't find what you are looking for?</h3>
-                                <p>Mines Act permits issued for {{project.name}} prior to 2013 can be accessed at <a href="mines.empr.gov.bc.ca" target="_blank">mines.empr.gov.bc.ca</a>. These records will be moved to the new BC Mine Information website in the coming months.</p>
-                                <button class="btn inverted slide-r-btn"><span>Visit mines.empr.gov.bc.ca</span><i class="material-icons">open_in_new</i></button>
+                                <p>Mines Act permits issued for {{project.name}} prior to 2013 can be accessed at <a href="https://mines.empr.gov.bc.ca" target="_blank">mines.empr.gov.bc.ca</a>. These records will be moved to the new BC Mine Information website in the coming months.</p>
+                                <a class="btn inverted slide-r-btn" href="https://mines.empr.gov.bc.ca" target="_blank"><span>Visit mines.empr.gov.bc.ca</span><i class="material-icons">open_in_new</i></a>
                             </div>
                             
                         </div><!-- / Authorizations -->
@@ -69,8 +69,8 @@
 
                             <div class="main-footer">
                                 <h3>Can't find what you are looking for?</h3>
-                                <p>Ministry of Energy and Mines inspection reports for {{project.name}} from 2013 through to 2015 can be accessed at <a href="mines.empr.gov.bc.ca" target="_blank">mines.empr.gov.bc.ca</a>. These records will be moved to the new BC Mine Information website in the coming months.</p>
-                                <button class="btn inverted slide-r-btn"><span>Visit mines.empr.gov.bc.ca</span><i class="material-icons">open_in_new</i></button>
+                                <p>Ministry of Energy and Mines inspection reports for {{project.name}} from 2013 through to 2015 can be accessed at <a href="https://mines.empr.gov.bc.ca" target="_blank">mines.empr.gov.bc.ca</a>. These records will be moved to the new BC Mine Information website in the coming months.</p>
+                                <a class="btn inverted slide-r-btn" href="https://mines.empr.gov.bc.ca" target="_blank"><span>Visit mines.empr.gov.bc.ca</span><i class="material-icons">open_in_new</i></a>
                             </div>
                         </div>
 
