ESM-856 - UI Cleanup for Roles & Groups Module (user-entry.html)

--- a/modules/core/client/scss/core.scss
+++ b/modules/core/client/scss/core.scss
@@ -5155,3 +5155,4 @@ tmpl-template-render {
 
 /* MODULES */
 @import "modules/project-comments/client/scss/project-comments.scss";
+@import "modules/users/client/scss/user-entry.scss"
