ESM-775, ESM-776: updates to not show certain contact fields on Edit Profile, and enhancements to Contacts in System > Contacts.

--- a/modules/users/client/views/user-edit.html
+++ b/modules/users/client/views/user-edit.html
@@ -17,10 +17,13 @@
 			x-groups-and-roles="groupsAndRoles"
 			x-org="org"
 			x-mode="mode"
+			x-enable-notes="enableNotes"
 			x-enable-signature="enableSignature"
 			x-enable-delete="enableDelete"
 			x-enable-save="enableSave"
 			x-enable-edit="enableEdit"
+			x-show-display-name="showDisplayName"
+			x-show-username="showUsername"
 			x-sref-return="srefReturn"
 			x-control="userEntryControl">
 	</div>
