ESM-854: use tables for each section (to/cc/bcc)

--- a/modules/communications/client/views/communication-edit.html
+++ b/modules/communications/client/views/communication-edit.html
@@ -90,8 +90,7 @@
 					x-enable-add-existing="true"
 					x-enable-cc="true"
 					x-enable-bcc="true"
-					x-show-mail="true"
-					x-show-type-col="true">
+					x-show-mail="true">
 		</div>
 
 		<div class="form-footer">
