--- a/modules/communications/client/views/communication-view.html
+++ b/modules/communications/client/views/communication-view.html
@@ -56,8 +56,7 @@
 				x-enable-add-existing="false"
 				x-enable-cc="true"
 				x-enable-bcc="true"
-				x-show-mail="true"
-				x-show-type-col="true">
+				x-show-mail="true">
 	</div>
 
 </div>
