--- a/modules/invitations/client/views/invitation-edit.html
+++ b/modules/invitations/client/views/invitation-edit.html
@@ -63,8 +63,7 @@
 					x-enable-add-existing="true"
 					x-enable-cc="false"
 					x-enable-bcc="false"
-					x-show-mail="false"
-					x-show-type-col="false">
+					x-show-mail="false">
 		</div>
 
 		<div class="form-footer">
