--- a/modules/invitations/client/views/invitation-view.html
+++ b/modules/invitations/client/views/invitation-view.html
@@ -52,8 +52,7 @@
 				x-enable-add-existing="false"
 				x-show-cc="false"
 				x-show-bcc="false"
-		        x-show-mail="false"
-				x-show-type-col="false">
+		        x-show-mail="false">
 	</div>
 
 </div>
